--- a/styles/courses.css
+++ b/styles/courses.css
@@ -14,7 +14,7 @@
     margin-bottom: 20px;
     background: linear-gradient(45deg, #ffffff, #f0f0f0);
     -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+
     background-clip: text;
 }
 
